--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,24 @@
     <string name="get_envolved">Get Involved</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="volunteer">Volunteer</string>
+    <string name="sponser">Sponsor</string>
+    <string name="work_with_us">Work With Us</string>
+    <string name="resources">Resources</string>
+    <string name="personal_details">Personal Details</string>
+    <string name="email">Email</string>
+    <string name="create_pin">Create Pin</string>
+    <string name="enter_foru_digit_pin_number">Enter 4 digit PIN Number</string>
+    <string name="re_enter_four_digit">Re-Enter your PIN Number</string>
+    <string name="send_us_a_message">Send us a message</string>
+    <string name="name">Name</string>
+    <string name="message">Message</string>
+    <string name="submit">Submit</string>
+    <string name="helpline">Helpline</string>
+    <string name="english">English:</string>
+    <string name="arabic">Arabic:</string>
+    <string name="dummy_string">The Constitution of India (IAST: Bhāratīya Saṃvidhāna) is the supreme law of India.[3][4] The document lays down the framework that demarcates fundamental political code, structure, procedures, powers, and duties of government institutions and sets out fundamental rights, directive principles, and the duties of citizens. It is the longest written national constitution in the world.</string>
+    <string name="amplify">Amplify</string>
+    <string name="your">your</string>
+    <string name="potential">potential</string>
 </resources>
