--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,26 @@
     <string name="amplify">Amplify</string>
     <string name="your">your</string>
     <string name="potential">potential</string>
+    <string name="sign_in">Sign In</string>
+    <string name="email_id">Email ID</string>
+    <string name="password">Password</string>
+    <string name="remember_me">Remember me</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="title_activity_vol_home">VolHomeActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="my_profile">My Profile</string>
+    <string name="my_shift">My Shift</string>
+    <string name="vol_calander">Volunteer Calender</string>
+    <string name="shift_swap_request">Shift Swap Requests</string>
+    <string name="client_service">Client Services</string>
+    <string name="on_duity_back">On-Duty Back-Up</string>
 </resources>
