--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="select_topic">Please select</string>
     <string name="choose_language">Choose Language</string>
     <string name="done">Done</string>
+    <string name="arbic1">Arbic</string>
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
