wirking over slide  menu language change ...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,14 @@
     <string name="choose_language">Choose Language</string>
     <string name="done">Done</string>
     <string name="arbic1">Arbic</string>
+    <string name="become_crisis_advocate">Become a crisis advocate</string>
+    <string name="apply">Apply</string>
+    <string name="other_opportunity">Other opportunities</string>
+    <string name="criss_advocate">Crisis Advocate</string>
+    <string name="individual">INDIVIDUAL</string>
+    <string name="corporate">CORPORATE</string>
+    <string name="raw_string">" Whether it be bribery, getting a desired day in court, or any sort of unjust practice to sway the results of a trial, India’s judicial system remains as one riddled with corruption from many sides. Lawyers, administrative staff, judges, defendants, and more have used these practices to sway countless cases, and exist at all levels of the court system. While the Indian Supreme Court is generally reserved for the cases of highest importance or urgency, because of petitions and the implementation of bribery, the public or individuals outside the Supreme Court have been able to decide what cases go to the highest court of law in India."</string>
+    <string name="medical_quantity">Medical Quantity</string>
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
