--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,10 @@
     <string name="outstanding_request">Outstanding Requests</string>
     <string name="shift_request_list">Shift Request List</string>
     <string name="service">Service</string>
+    <string name="shift_log">Shift Log</string>
+    <string name="calendar_mode">Calendar \nMode</string>
+    <string name="list_mode">List \nMode</string>
+    <string name="open_shift">Open Shift</string>
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
