--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="shelf_registration">Sift Registration</string>
     <string name="shift">Shift</string>
     <string name="job">Job</string>
+    <string name="accept">Accept</string>
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
