--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="accept">Accept</string>
     <string name="change_password">Change Password</string>
     <string name="enable_biometric">Enable Biometric</string>
+    <string name="old_password">Old Password</string>
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
