--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,14 @@
     <string name="title">Title</string>
     <string name="please_enter_title">Please enter title.</string>
     <string name="please_enter_description">Please enter description.</string>
+    <string name="alert">Alert</string>
+    <string name="pending_alert">Pending Alert</string>
+    <string name="record_submitted_successfully">Your Record was submitted successfully. It will appear after admin approval.</string>
+    <string name="past_case">Past Cases</string>
+    <string name="advocacy_level">Advocacy Levels</string>
+    <string name="beginner">Beginner</string>
+    <string name="reporting_error">Reporting Errors!</string>
+    <string name="admin_notes">Admin Notes</string>
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
