--- a/app/src/main/res/values-ar-rBH/strings.xml
+++ b/app/src/main/res/values-ar-rBH/strings.xml
@@ -95,4 +95,94 @@
     <string name="from_what_country_you_are_calling">من اي بلد تتصل</string>
     <string name="what_type_of_issue_you_are_facing">ما نوع المشكلة أو الإساءة التي تواجهها؟</string>
     <string name="select_topic">الرجاء التحديد</string>
+    <string name="choose_language">اختر اللغة</string>
+    <string name="done">منتهي</string>
+    <string name="arbic1">أربيك</string>
+    <string name="become_crisis_advocate">كن مدافعًا عن الأزمات</string>
+    <string name="apply">يتقدم</string>
+    <string name="other_opportunity">فرص أخرى</string>
+    <string name="criss_advocate">محامي الأزمات</string>
+    <string name="individual">فردي</string>
+    <string name="corporate">شركة كبرى</string>
+    <string name="raw_string">سواء أكان الأمر يتعلق بالرشوة ، أو الحصول على يوم مرغوب فيه في المحكمة ، أو أي نوع من الممارسات غير العادلة للتأثير على نتائج المحاكمة ، فإن النظام القضائي في الهند يظل نظامًا مليئًا بالفساد من جهات عديدة. استخدم المحامون والموظفون الإداريون والقضاة والمدعى عليهم وغيرهم هذه الممارسات للتأثير في قضايا لا حصر لها ، وهي موجودة على جميع مستويات نظام المحاكم. في حين أن المحكمة العليا الهندية مخصصة بشكل عام للقضايا ذات الأهمية القصوى أو الاستعجال ، بسبب الالتماسات وتنفيذ الرشوة ، فقد تمكن الجمهور أو الأفراد خارج المحكمة العليا من تحديد القضايا التي يتم رفعها إلى أعلى محكمة قانونية في الهند .</string>
+    <string name="medical_quantity">الكمية الطبية</string>
+    <string name="medical">طبي</string>
+    <string name="bhd">دينار</string>
+    <string name="debit">دَين</string>
+    <string name="credit">ائتمان</string>
+    <string name="pay_now">ادفع الآن</string>
+    <string name="memo">مذكرة</string>
+    <string name="amount">كمية</string>
+    <string name="company">شركة</string>
+    <string name="intrest_inquiry">الاهتمامات / الاستفسار</string>
+    <string name="upload_cv">تحميل السيرة الذاتية</string>
+    <string name="cancel">يلغي</string>
+    <string name="hospital">مستشفى</string>
+    <string name="indentifying_abouse">تحديد</string>
+    <string name="welcome_to_the_shamsha_application">مرحبا بكم في تطبيق شمسة!</string>
+    <string name="free">حر</string>
+    <string name="view_event">عرض المناسبة</string>
+    <string name="description">وصف</string>
+    <string name="short_form">نموذج قصير</string>
+    <string name="long_form">وثيقةطويلة</string>
+    <string name="case_id">ID القضية:</string>
+    <string name="language_support">دعم اللغة</string>
+    <string name="send">يرسل</string>
+    <string name="backup_support">دعم النسخ الاحتياطي</string>
+    <string name="supporet_for">الدعم ل:</string>
+    <string name="outstanding_request">الطلبات المعلقة</string>
+    <string name="shift_request_list">قائمة طلبات التحول</string>
+    <string name="service">خدمة</string>
+    <string name="shift_log">سجل التحول</string>
+    <string name="calendar_mode">تقويم</string>
+    <string name="list_mode">قائمة</string>
+    <string name="open_shift">فتح</string>
+    <string name="filters">المرشحات</string>
+    <string name="all_shift">جميع المناوبات</string>
+    <string name="day_shift">نوبات اليوم</string>
+    <string name="night_shift">دوام ليلي</string>
+    <string name="my_shift_slashn">لي</string>
+    <string name="open_shift_slashn">يفتح</string>
+    <string name="shelf_registration">تسجيل النخل</string>
+    <string name="shift">يحول</string>
+    <string name="job">وظيفة</string>
+    <string name="accept">يقبل</string>
+    <string name="change_password">تغيير كلمة المرور</string>
+    <string name="enable_biometric">تفعيل المقاييس الحيوية</string>
+    <string name="old_password">كلمة المرور القديمة</string>
+    <string name="past_report">التقرير السابق</string>
+    <string name="new_password">كلمة المرور الجديدة</string>
+    <string name="re_enter_new_password">أعد إدخال كلمة مرور جديدة</string>
+    <string name="dashboard">لوحة القيادة</string>
+    <string name="profile">حساب تعريفي</string>
+    <string name="upcoming">الدردشة القادمة</string>
+    <string name="previous">تقرير الحالة</string>
+    <string name="unavailable">غير متوفره</string>
+    <string name="available">متاح</string>
+    <string name="primary_language">اللغة الأساسية</string>
+    <string name="secondary_language">اللغة الثانوية</string>
+    <string name="country_of_location">بلد الموقع</string>
+    <string name="case_taken_level">القضية التي اتخذت / المستوى</string>
+    <string name="id">بطاقة تعريف</string>
+    <string name="national_id">الهوية الوطنية</string>
+    <string name="vol_id">هوية المتطوع</string>
+    <string name="add_announcement">اضافة اعلان</string>
+    <string name="title">عنوان</string>
+    <string name="please_enter_title">الرجاء إدخال العنوان.</string>
+    <string name="please_enter_description">الرجاء إدخال الوصف.</string>
+    <string name="alert">يُحذًِر</string>
+    <string name="pending_alert">تنبيه معلق</string>
+    <string name="record_submitted_successfully">تم تقديم السجل الخاص بك بنجاح. سيظهر بعد موافقة المسؤول.</string>
+    <string name="past_case">الحالات السابقة</string>
+    <string name="advocacy_level">مستويات المناصرة</string>
+    <string name="beginner">مبتدئ</string>
+    <string name="reporting_error">الإبلاغ عن الأخطاء!</string>
+    <string name="admin_notes">ملاحظات المسؤول</string>
+    <string name="silver">فضة</string>
+    <string name="gold">ذهب</string>
+    <string name="platinum">البلاتين</string>
+    <string name="incoming_chat">محادثة واردة</string>
+    <string name="disclaimer2">نحن نأخذ خصوصيتك على محمل الجد ولا نجمع أي بيانات دون موافقتك الصريحة. يتم الاحتفاظ بجميع المعلومات المقدمة من قبل مستخدمينا بسرية تامة ولا يتم مشاركتها مع أطراف ثالثة.</string>
+    <string name="git_it">فهمتها</string>
+    <string name="disclaimer">إخلاء المسؤولية - لا يتم جمع البيانات والهويات سرية.</string>
 </resources>
