--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,7 +189,10 @@
     <string name="gold">Gold</string>
     <string name="platinum">Platinum</string>
     <string name="incoming_chat">Incoming Chat</string>
-    <string name="disclaimer">Disclaimer- Data is not being collected and their identity is confidential. <font color='#5E5783'>TermsConditon</font></string>
+    <string name="disclaimer">Disclaimer- Data is not being collected and identities are confidential. <font color='#5E5783'>TermsConditon</font></string>
+    <string name="disclaimer2">We take your privacy seriously and do not collect any data without your explicit consent. All information provided by our users is kept strictly confidential and is never shared with third parties.</string>
+    <string name="git_it">Got It</string>
+
     <string-array name="planets_array">
         <item>Mercury</item>
         <item>Venus</item>
